--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "babel-preset-react-optimize": "*",
     "babel-preset-stage-0": "*",
     "babel-register": "*",
+    "css-loader": "^0.23.1",
+    "enhanced-require": "^0.5.0-beta6",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jsdom": "*",
     "node-sass": "^3.8.0",
+    "raw-loader": "^0.5.1",
     "react-addons-test-utils": "*",
     "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "*"
   },
   "repository": {
