--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["react-optimize", "react", "es2015-ie", "stage-0"],
-    "plugins": [],
+    "plugins": ["transform-decorators-legacy"],
 }
