--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-cli": "*",
     "babel-core": "*",
     "babel-loader": "*",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "*",
     "babel-preset-es2015": "*",
     "babel-preset-es2015-ie": "*",
