--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsdom": "*",
     "node-sass": "^3.8.0",
     "raw-loader": "^0.5.1",
+    "react-addons-perf": "^15.2.1",
     "react-addons-test-utils": "*",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
