--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.23.1",
     "enhanced-require": "^0.5.0-beta6",
     "extract-text-webpack-plugin": "^1.0.1",
+    "group-css-media-queries-loader": "^1.0.0",
     "jsdom": "*",
     "node-sass": "^3.8.0",
     "raw-loader": "^0.5.1",
