--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
-    "presets": ["react-optimize", "react", "es2015-ie", "stage-0"],
-    "plugins": ["transform-decorators-legacy"],
+  "env": {
+    "production": {
+      "presets": [["es2015", {"modules": false}], "react", "stage-0"],
+      "plugins": ["transform-decorators-legacy"]
+    },
+    "development": {
+      "presets": [["es2015", {"modules": false}], "react", "stage-0"],
+      "plugins": ["react-hot-loader/babel", "transform-decorators-legacy"]
+    },
+    "cli": {
+      "presets": ["es2015", "react", "stage-0"],
+      "plugins": ["transform-decorators-legacy"]
+    }
+  }
 }
