--- a/package.json
+++ b/package.json
@@ -2,45 +2,17 @@
   "name": "curls",
   "version": "0.0.1-alpha",
   "main": "index.js",
-  "private": true,
+  "private": false,
   "dependencies": {
     "lodash": "^4.15.0",
     "react": "^15.3.0",
     "react-addons-shallow-compare": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-cake": "0.0.1-alpha",
+    "react-dom": "^15.3.0",
+    "react-pilot": "0.0.5-alpha"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.11.6",
-    "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
-    "deasync": "^0.1.7",
-    "extract-text-webpack-plugin": "^2.0.0-beta.3",
-    "group-css-media-queries-loader": "^1.0.0",
-    "jsdom": "^9.4.2",
-    "modernizr-webpack-plugin": "^1.0.5",
-    "node-sass": "^3.8.0",
-    "public-ip": "^2.0.1",
-    "react-addons-perf": "^15.3.0",
-    "react-addons-test-utils": "^15.3.0",
-    "react-hot-loader": "^3.0.0-beta.2",
-    "sass-loader": "^4.0.0",
-    "strip-loader": "^0.1.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.20",
-    "webpack-dashboard": "0.0.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^2.1.0-beta.0",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack2-es7-react-sass-boilerplate": "*"
   },
   "repository": {
     "type": "git",
