--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "curls",
-  "version": "0.0.1-alpha",
+  "version": "0.1.0",
   "main": "index.js",
   "private": false,
   "dependencies": {
     "lodash": "^4.15.0",
-    "react": "^15.3.0",
-    "react-addons-shallow-compare": "^15.3.0",
-    "react-cake": "0.0.1-alpha",
-    "react-dom": "^15.3.0",
-    "react-pilot": "0.0.5-alpha"
+    "react": "^15.4.2",
+    "react-addons-shallow-compare": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-cake": "^0.1.0",
+    "react-pilot": "^0.1.0"
   },
   "devDependencies": {
-    "webpack2-es7-react-sass-boilerplate": "*"
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "cross-env": "^3.1.3",
+    "webpack2-react-sass-es7-boilerplate": "^0.1.4"
   },
   "repository": {
     "type": "git",
