--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "curls",
-  "version": "0.1.0",
+  "version": "0.1.4",
   "main": "index.js",
   "private": false,
   "dependencies": {
     "lodash": "^4.15.0",
-    "react": "^15.4.2",
-    "react-addons-shallow-compare": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-cake": "^0.1.0",
-    "react-pilot": "^0.1.0"
+    "react-cake": "^0.1.6",
+    "react-pilot": "^0.1.8"
+  },
+  "peerDependencies": {
+    "react": ">=15.x",
+    "react-addons-shallow-compare": ">=15.x",
+    "react-dom": ">=15.x"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
