--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,71 @@
 {
   "env": {
     "production": {
-      "presets": ["es2016", ["es2015", {"modules": false}], "react", "stage-0"],
+      "presets": [
+        "react",
+        "react-optimize",
+        [
+          "env", {
+              "debug": true,
+              "modules": false,
+              "useBuiltIns": true,
+              "targets": {
+                "browsers": "defaults"
+              }
+          }
+        ],
+        "stage-0"
+      ],
+      "plugins": ["transform-decorators-legacy"]
+    },
+    "commonjs": {
+      "presets": [
+        "react",
+        "react-optimize",
+        [
+          "env", {
+            "debug": true,
+            "loose": true,
+            "modules": "commonjs"
+          }
+        ],
+        "stage-0"
+      ],
+      "plugins": ["transform-decorators-legacy"]
+    },
+    "es": {
+      "presets": [
+        "react",
+        "react-optimize",
+        [
+          "env", {
+            "debug": true,
+            "modules": false,
+          }
+        ],
+        "stage-0"
+      ],
       "plugins": ["transform-decorators-legacy"]
     },
     "development": {
-      "presets": ["es2016", ["es2015", {"modules": false}], "react", "stage-0"],
-      "plugins": ["react-hot-loader/babel", "transform-decorators-legacy"]
+      "presets": [
+        "react",
+        [
+          "env", {
+            "debug": false,
+            "modules": false,
+            "useBuiltIns": true,
+            "targets": {
+              "browsers": ["chrome >= 56"]
+            }
+          }
+        ],
+        "stage-0"
+      ],
+      "plugins": ["transform-decorators-legacy"]
     },
     "cli": {
-      "presets": ["es2016", "es2015", "react", "stage-0"],
+      "presets": ["react", "env", "stage-0"],
       "plugins": ["transform-decorators-legacy"]
     }
   }
