--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "curls",
-  "version": "0.1.4",
-  "main": "index.js",
+  "version": "0.2.0",
+  "main": "es/index",
+  "module": "es/index",
+  "jsnext:main": "es/index",
   "private": false,
   "dependencies": {
-    "lodash": "^4.15.0",
-    "react-cake": "^0.1.6",
-    "react-pilot": "^0.1.8"
+    "browser-essentials": "^0.2.1",
+    "lodash": "^4.17.4",
+    "react-cake": "^0.2.3",
+    "react-pilot": "^0.2.0"
   },
   "peerDependencies": {
     "react": ">=15.x",
@@ -14,9 +17,8 @@
     "react-dom": ">=15.x"
   },
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "cross-env": "^3.1.3",
-    "webpack2-react-sass-es7-boilerplate": "^0.1.4"
+    "react-addons-shallow-compare": "^15.4.2",
+    "webpack2-react-sass-env-boilerplate": "^0.1.14"
   },
   "repository": {
     "type": "git",
@@ -24,12 +26,16 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development node server.js",
-    "build": "npm run build:es5 && npm run build:es6",
-    "build:es5": "cross-env NODE_ENV=cli babel ./lib --out-dir es5",
-    "build:es6": "cross-env NODE_ENV=production babel ./lib --out-dir ./",
-    "build:dist": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "start:cli": "cross-env NODE_ENV=cli babel-node ./lib/index.js",
-    "prepublish": "npm run build"
+    "build": "npm run build:commonjs && npm run build:es && npm run build:dist",
+    "build:commonjs": "rm -rf commonjs && cross-env NODE_ENV=commonjs babel ./src --out-dir commonjs",
+    "build:es": "rm -rf es && cross-env NODE_ENV=es babel ./src --out-dir es",
+    "build:dist": "rm -rf dist && cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "start:cli": "npm run node ./src/index.js",
+    "node": "cross-env NODE_ENV=cli babel-node",
+    "watch:commonjs": "cross-env NODE_ENV=commonjs babel ./src -w --out-dir commonjs",
+    "watch:es": "cross-env NODE_ENV=es babel ./src -w --out-dir es",
+    "prepublish": "npm run build",
+    "analyze": "cross-env NODE_ENV=production webpack --config webpack.config.js -j | webpack-bundle-size-analyzer"
   },
   "analyze": true,
   "license": "MIT"
