--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "curls",
-  "version": "0.2.0",
+  "version": "0.2.3",
   "main": "es/index",
   "module": "es/index",
   "jsnext:main": "es/index",
   "private": false,
   "dependencies": {
-    "browser-essentials": "^0.2.1",
+    "browser-essentials": "^0.2.2",
     "lodash": "^4.17.4",
-    "react-cake": "^0.2.3",
-    "react-pilot": "^0.2.0"
+    "react-cake": "^0.2.4",
+    "react-pilot": "^0.2.1"
   },
   "peerDependencies": {
     "react": ">=15.x",
@@ -37,6 +37,22 @@
     "prepublish": "npm run build",
     "analyze": "cross-env NODE_ENV=production webpack --config webpack.config.js -j | webpack-bundle-size-analyzer"
   },
+  "keywords": [
+    "ui-framework",
+    "ui",
+    "react",
+    "react-components",
+    "react-component",
+    "responsive",
+    "css",
+    "sass",
+    "frontend-framework",
+    "frontend",
+    "sass-framework"
+  ],
+  "authors": [
+    "Jared Lunde <jared@tessellate.io> (https://github.com/jaredlunde)"
+  ],
   "analyze": true,
   "license": "MIT"
 }
