--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "browser-essentials": "^0.2.4",
     "lodash.endswith": "^4.2.1",
-    "react-cake": "0.3.0-alpha.0",
+    "react-cake": "file:../../../../pkg/cake",
     "react-pilot": "^0.2.1"
   },
   "peerDependencies": {
