--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "esnext": "src/index",
   "private": false,
   "dependencies": {
+    "cancelable-promise": "^2.3.0",
     "react": "next",
     "react-dom": "next",
     "react-immutable-proptypes": "^2.1.0",
