--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "private": false,
   "dependencies": {
     "cancelable-promise": "^2.3.0",
-    "react": "next",
-    "react-dom": "next",
+    "react": "^16.0.0-rc.3",
+    "react-dom": "^16.0.0-rc.3",
     "react-immutable-proptypes": "^2.1.0",
     "webpack": "^3.0.0"
   },
@@ -19,7 +19,10 @@
     "react-dom": ">=15.x"
   },
   "devDependencies": {
-    "webpack2-react-sass-env-boilerplate": "^0.2.3"
+    "babel-loader": "^7.1.2",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "sass-loader": "^6.0.6",
+    "webpack2-react-sass-env-boilerplate": "^0.2.6"
   },
   "repository": {
     "type": "git",
