webpack 4 and fixes exports

--- a/package.json
+++ b/package.json
@@ -57,5 +57,6 @@
     "Jared Lunde <jared@tessellate.io> (https://github.com/jaredlunde)"
   ],
   "analyze": true,
+  "sideEffects": false,
   "license": "MIT"
 }
