--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^16.0.0-rc.3",
     "react-dom": "^16.0.0-rc.3",
     "react-immutable-proptypes": "^2.1.0",
-    "webpack": "^3.0.0"
+    "webpack": "4.0.0-alpha.0"
   },
   "peerDependencies": {
     "immutable": "^3.8.1",
@@ -19,10 +19,27 @@
     "react-dom": ">=15.x"
   },
   "devDependencies": {
-    "babel-loader": "^7.1.2",
+    "@babel/cli": "^7.0.0-beta.34",
+    "@babel/core": "^7.0.0-beta.34",
+    "@babel/polyfill": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "@babel/preset-react": "^7.0.0-beta.34",
+    "@babel/preset-stage-0": "^7.0.0-beta.34",
+    "@babel/register": "^7.0.0-beta.34",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-react-pure-components": "^3.1.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
+    "cross-env": "^5.1.1",
+    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
+    "group-css-media-queries": "^1.4.1",
+    "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "webpack2-react-sass-env-boilerplate": "^0.2.6"
+    "strip-loader": "^0.1.2",
+    "style-loader": "^0.19.0"
   },
   "repository": {
     "type": "git",
@@ -33,7 +50,7 @@
     "build": "yarn run build:commonjs && yarn run build:es && yarn run build:dist",
     "build:commonjs": "rm -rf commonjs && cross-env NODE_ENV=commonjs babel ./src --out-dir commonjs",
     "build:es": "rm -rf es && cross-env NODE_ENV=es babel ./src --out-dir es",
-    "build:dist": "rm -rf dist && cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "build:dist": "rm -rf dist && cross-env NODE_ENV=production webpack --mode production --config webpack.config.js",
     "node": "cross-env NODE_ENV=cli babel-node",
     "watch:commonjs": "cross-env NODE_ENV=commonjs babel ./src -w --out-dir commonjs",
     "watch:es": "cross-env NODE_ENV=es babel ./src -w --out-dir es",
