--- a/.babelrc
+++ b/.babelrc
@@ -13,13 +13,18 @@
             }
           }
         ],
-        "@babel/preset-stage-0"
+        "@babel/preset-stage-2"
       ],
       "plugins": [
         "transform-decorators-legacy",
         "transform-react-pure-components",
-        "transform-react-inline-elements",
-        "transform-react-constant-elements",
+        "@babel/plugin-transform-react-constant-elements",
+        "@babel/plugin-transform-react-inline-elements",
+        "@babel/plugin-proposal-do-expressions",
+        "@babel/plugin-proposal-export-default-from",
+        "@babel/plugin-proposal-nullish-coalescing-operator",
+        "@babel/plugin-proposal-optional-chaining",
+        "@babel/plugin-proposal-pipeline-operator",
         "transform-react-remove-prop-types"
       ]
     },
@@ -34,13 +39,18 @@
             "useBuiltIns": "usage"
           }
         ],
-        "@babel/preset-stage-0"
+        "@babel/preset-stage-2"
       ],
       "plugins": [
         "transform-decorators-legacy",
         "transform-react-pure-components",
-        "transform-react-inline-elements",
-        "transform-react-constant-elements",
+        "@babel/plugin-transform-react-constant-elements",
+        "@babel/plugin-transform-react-inline-elements",
+        "@babel/plugin-proposal-do-expressions",
+        "@babel/plugin-proposal-export-default-from",
+        "@babel/plugin-proposal-nullish-coalescing-operator",
+        "@babel/plugin-proposal-optional-chaining",
+        "@babel/plugin-proposal-pipeline-operator",
         "transform-react-remove-prop-types"
       ]
     },
@@ -54,13 +64,18 @@
             "useBuiltIns": "usage"
           }
         ],
-        "@babel/preset-stage-0"
+        "@babel/preset-stage-2"
       ],
       "plugins": [
         "transform-decorators-legacy",
         "transform-react-pure-components",
-        "transform-react-inline-elements",
-        "transform-react-constant-elements",
+        "@babel/plugin-transform-react-constant-elements",
+        "@babel/plugin-transform-react-inline-elements",
+        "@babel/plugin-proposal-do-expressions",
+        "@babel/plugin-proposal-export-default-from",
+        "@babel/plugin-proposal-nullish-coalescing-operator",
+        "@babel/plugin-proposal-optional-chaining",
+        "@babel/plugin-proposal-pipeline-operator",
         "transform-react-remove-prop-types"
       ]
     },
@@ -77,13 +92,18 @@
             }
           }
         ],
-        "@babel/preset-stage-0"
+        "@babel/preset-stage-2"
       ],
       "plugins": [
         "transform-decorators-legacy",
         "transform-react-pure-components",
-        "transform-react-inline-elements",
-        "transform-react-constant-elements",
+        "@babel/plugin-transform-react-constant-elements",
+        "@babel/plugin-transform-react-inline-elements",
+        "@babel/plugin-proposal-do-expressions",
+        "@babel/plugin-proposal-export-default-from",
+        "@babel/plugin-proposal-nullish-coalescing-operator",
+        "@babel/plugin-proposal-optional-chaining",
+        "@babel/plugin-proposal-pipeline-operator",
         "transform-react-remove-prop-types"
       ]
     },
@@ -97,13 +117,18 @@
             "useBuiltIns": "usage"
           }
         ],
-        "@babel/preset-stage-0"
+        "@babel/preset-stage-2"
       ],
       "plugins": [
         "transform-decorators-legacy",
         "transform-react-pure-components",
-        "transform-react-inline-elements",
-        "transform-react-constant-elements",
+        "@babel/plugin-transform-react-constant-elements",
+        "@babel/plugin-transform-react-inline-elements",
+        "@babel/plugin-proposal-do-expressions",
+        "@babel/plugin-proposal-export-default-from",
+        "@babel/plugin-proposal-nullish-coalescing-operator",
+        "@babel/plugin-proposal-optional-chaining",
+        "@babel/plugin-proposal-pipeline-operator",
         "transform-react-remove-prop-types"
       ]
     }
