--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "dependencies": {
     "cancelable-promise": "^2.3.0",
+    "fast-memoize": "^2.2.8",
     "react": "^16.0.0-rc.3",
     "react-dom": "^16.0.0-rc.3",
     "react-immutable-proptypes": "^2.1.0",
@@ -21,10 +22,17 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.34",
     "@babel/core": "^7.0.0-beta.34",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.35",
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0-beta.35",
+    "@babel/plugin-transform-react-inline-elements": "^7.0.0-beta.35",
     "@babel/polyfill": "^7.0.0-beta.34",
     "@babel/preset-env": "^7.0.0-beta.34",
     "@babel/preset-react": "^7.0.0-beta.34",
-    "@babel/preset-stage-0": "^7.0.0-beta.34",
+    "@babel/preset-stage-2": "^7.0.0-beta.35",
     "@babel/register": "^7.0.0-beta.34",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
