--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "curls",
-  "version": "0.4.0-alpha.1",
+  "version": "0.4.0",
   "main": "es/index",
   "module": "es/index",
   "jsnext:main": "es/index",
