improved the size of the distribution build

--- a/.babelrc
+++ b/.babelrc
@@ -16,6 +16,7 @@
         "@babel/preset-stage-2"
       ],
       "plugins": [
+        "@babel/plugin-transform-runtime",
         "transform-decorators-legacy",
         "transform-react-pure-components",
         "@babel/plugin-transform-react-constant-elements",
@@ -42,6 +43,7 @@
         "@babel/preset-stage-2"
       ],
       "plugins": [
+        "@babel/plugin-transform-runtime",
         "transform-decorators-legacy",
         "transform-react-pure-components",
         "@babel/plugin-transform-react-constant-elements",
@@ -67,6 +69,7 @@
         "@babel/preset-stage-2"
       ],
       "plugins": [
+        "@babel/plugin-transform-runtime",
         "transform-decorators-legacy",
         "transform-react-pure-components",
         "@babel/plugin-transform-react-constant-elements",
@@ -95,6 +98,7 @@
         "@babel/preset-stage-2"
       ],
       "plugins": [
+        "@babel/plugin-transform-runtime",
         "transform-decorators-legacy",
         "transform-react-pure-components",
         "@babel/plugin-transform-react-constant-elements",
@@ -120,6 +124,7 @@
         "@babel/preset-stage-2"
       ],
       "plugins": [
+        "@babel/plugin-transform-runtime",
         "transform-decorators-legacy",
         "transform-react-pure-components",
         "@babel/plugin-transform-react-constant-elements",
