--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "es/index",
   "module": "es/index",
   "jsnext:main": "es/index",
-  "esnext": "src/index",
+  "esnext": "es/index",
+  "sideEffects": false,
   "private": false,
   "dependencies": {
     "cancelable-promise": "^2.3.0",
     "fast-memoize": "^2.2.8",
     "react": "^16.0.0-rc.3",
+    "react-cake": "^0.3.3",
     "react-dom": "^16.0.0-rc.3",
     "react-immutable-proptypes": "^2.1.0",
     "webpack": "4.0.0-alpha.0"
@@ -29,11 +31,13 @@
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.35",
     "@babel/plugin-transform-react-constant-elements": "^7.0.0-beta.35",
     "@babel/plugin-transform-react-inline-elements": "^7.0.0-beta.35",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.35",
     "@babel/polyfill": "^7.0.0-beta.34",
     "@babel/preset-env": "^7.0.0-beta.34",
     "@babel/preset-react": "^7.0.0-beta.34",
     "@babel/preset-stage-2": "^7.0.0-beta.35",
     "@babel/register": "^7.0.0-beta.34",
+    "@babel/runtime": "^7.0.0-beta.35",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
@@ -82,6 +86,5 @@
     "Jared Lunde <jared@tessellate.io> (https://github.com/jaredlunde)"
   ],
   "analyze": true,
-  "sideEffects": false,
   "license": "MIT"
 }
