Improved dist/module builds

--- a/package.json
+++ b/package.json
@@ -48,7 +48,14 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "group-css-media-queries": "^1.4.1",
+    "immutable": "^3.8.2",
     "node-sass": "^4.7.2",
+    "rollup": "^0.52.2",
+    "rollup-plugin-babel": "^4.0.0-beta.0",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "sass-loader": "^6.0.6",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.19.0"
@@ -62,7 +69,9 @@
     "build": "yarn run build:commonjs && yarn run build:es && yarn run build:dist",
     "build:commonjs": "rm -rf commonjs && cross-env NODE_ENV=commonjs babel ./src --out-dir commonjs",
     "build:es": "rm -rf es && cross-env NODE_ENV=es babel ./src --out-dir es",
-    "build:dist": "rm -rf dist && cross-env NODE_ENV=production webpack --mode production --config webpack.config.js",
+    "build:dist:js": "cross-env BABEL_ENV=production NODE_ENV=production rollup -c -i src/index.js -o dist/curls.js",
+    "build:dist:css": "cross-env NODE_ENV=production webpack --mode production --config webpack.config.js",
+    "build:dist": "rm -rf dist && cross-env NODE_ENV=production yarn build:dist:js && yarn build:dist:css",
     "node": "cross-env NODE_ENV=cli babel-node",
     "watch:commonjs": "cross-env NODE_ENV=commonjs babel ./src -w --out-dir commonjs",
     "watch:es": "cross-env NODE_ENV=es babel ./src -w --out-dir es",
